--- a/src/style.css
+++ b/src/style.css
@@ -59,6 +59,9 @@ body {
     color: white;
     background-color: midnightblue;
     border: 1px solid white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .enemy button:hover {
@@ -69,4 +72,11 @@ body {
 .enemy button.shot:hover {
     background-color: maroon;
     cursor:not-allowed;
+}
+
+.circle {
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    display: inline-block;
 }
