--- a/src/style.css
+++ b/src/style.css
@@ -91,7 +91,8 @@ body {
     background-color: blue;
 }
 
-.available:hover {
+.available:hover,
+button.possible-placement {
     background-color: lightgray;
 }
 
