--- a/src/style.css
+++ b/src/style.css
@@ -31,6 +31,8 @@ body {
     align-items: center;
     background-color: midnightblue;
     height: 10vh;
+    color: white;
+    font-size: 2rem;
 }
 
 #boards-section {
